feat: add api for company profile
