# sariguna/app/company_profile/dto/response/reponse.go
@@ -1,0 +1,7 @@
+package response
+
+type CompanyProfileResponse struct {
+	Sejarah string `json:"sejarah"`
+	Visi    string `json:"visi"`
+	Misi    string `json:"misi"`
+}
