# sariguna/app/company_profile/entity/entity.go
@@ -1,0 +1,7 @@
+package entity
+
+type CompanyProfileCore struct {
+	Sejarah string
+	Visi    string
+	Misi    string
+}
