# sariguna/app/company_profile/model/model.go
@@ -1,0 +1,8 @@
+package model
+
+type CompanyProfile struct {
+	Id      int    `db:"id"`
+	Sejarah string `db:"sejarah"`
+	Visi    string `db:"visi"`
+	Misi    string `db:"misi"`
+}
