# sariguna/app/route/route_company_profile.go
@@ -1,0 +1,24 @@
+package route
+
+import (
+	"sariguna_backend/sariguna/app/company_profile/handler"
+	"sariguna_backend/sariguna/app/company_profile/repository"
+	"sariguna_backend/sariguna/app/company_profile/service"
+	"sariguna_backend/sariguna/pkg/middleware"
+
+	"github.com/gin-gonic/gin"
+	"github.com/jmoiron/sqlx"
+)
+
+func RouteCompanyProfile(r *gin.RouterGroup, db *sqlx.DB) {
+	companyProfileRepository := repository.NewCompanyProfileRepository(db)
+	companyProfileService := service.NewCompanyProfileService(companyProfileRepository)
+	companyProfileHandler := handler.NewCompanyProfileHandler(companyProfileService)
+
+	cp := r.Group("/profile")
+
+	cp.GET("", middleware.Auth, companyProfileHandler.GetCompanyProfile)
+
+	cp.PUT("/update", middleware.Auth, companyProfileHandler.UpdateCompanyProfile)
+
+}
